# gruppenstunde

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.db  INSTRUCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  cloudbuild-pr.yaml  cloudbuild.yaml  docker-compose.yml
backend/: AGENTS.md  conftest.py  manage.py  pyproject.toml
backend/blog/: admin.py  api.py  choices.py  models.py  schemas.py
backend/blog/migrations/: 0001_initial.py  0002_initial.py
backend/blog/tests/: test_api.py
backend/content/: admin.py  admin_api.py  apps.py  base_api.py  base_schemas.py  choices.py  tags_api.py
backend/content/api/: __init__.py  admin.py  ai.py  content_links.py  featured.py  helpers.py  search.py  tags.py
backend/content/migrations/: 0001_initial.py  0002_pg_trgm.py
backend/content/models/: __init__.py  approval.py  core.py  interactions.py  links.py  search.py  tags.py
backend/content/schemas/: __init__.py  admin.py  ai.py  base.py  content_links.py  search.py  tags.py
backend/content/services/: ai_service.py  ai_supply_service.py  approval_service.py  email_service.py  embedding_service.py  linking_service.py  search_service.py
backend/content/tests/: test_api.py  test_approval.py  test_comments_emotions.py  test_linking_service.py  test_models.py
backend/core/: admin.py  api.py  apps.py  search_service.py
backend/event/: AGENTS.md  admin.py  api.py  apps.py  choices.py  models.py  schemas.py  signals.py
backend/event/api/: __init__.py  custom_fields.py  day_slots.py  events.py  export.py  helpers.py  labels.py  locations.py  mail.py  participants.py  payment.py  persons.py  stats.py  timeline.py
backend/event/migrations/: 0001_initial.py  0002_event_invitation_text_eventlocation_and_more.py  0002_initial.py  0003_alter_person_options_remove_participant_eat_habits_and_more.py  0003_initial.py  0004_alter_person_options_person_is_owner.py  0004_remove_participant_is_paid_customfield_and_more.py  0005_add_packing_list_to_event.py  0005_alter_eventdayslot_options.py  0006_add_is_system_to_booking_option.py  0007_create_system_booking_options.py  0008_event_participant_visibility.py
backend/event/models/: __init__.py  core.py  custom_fields.py  day_slots.py  labels.py  payment.py  timeline.py
backend/event/schemas/: __init__.py  core.py  custom_fields.py  day_slots.py  export.py  labels.py  mail.py  payment.py  stats.py  timeline.py
backend/event/services/: __init__.py  (+5 more)
backend/game/: admin.py  api.py  apps.py  choices.py  models.py  schemas.py
backend/idea/: admin.py  api.py  apps.py  choices.py  ingredient_api.py  models.py  schemas.py
backend/inspi/: asgi.py  urls.py  wsgi.py
backend/packinglist/: admin.py  api.py  apps.py  models.py  schemas.py
backend/planner/: admin.py  api.py  apps.py  meal_plan_api.py  models.py  schemas.py
backend/profiles/: admin.py  api.py  apps.py  choices.py  models.py  schemas.py
backend/recipe/: admin.py  api.py  apps.py  choices.py  models.py  schemas.py  signals.py
backend/session/: admin.py  api.py  apps.py  choices.py  models.py  schemas.py
backend/shopping/: api.py  consumers.py  models.py  routing.py  schemas.py
backend/supply/: admin.py  apps.py  choices.py
(+499 files in other folders)
